<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_bottom"
    android:paddingTop="@dimen/padding_top"
    tools:context="com.example.android.quizapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="@dimen/padding_size">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/quiz1_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left">

            <CheckBox
                android:id="@+id/chb1T"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="casual"
                android:text="@string/T"
                android:textSize="@dimen/text_size" />

            <CheckBox
                android:id="@+id/chb1F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/F"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding_size">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/quiz2_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left">

            <CheckBox
                android:id="@+id/chb2T"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/T"
                android:textSize="@dimen/text_size" />

            <CheckBox
                android:id="@+id/chb2F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/F"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding_size">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/quiz3_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left">

            <CheckBox
                android:id="@+id/chb3T"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/T"
                android:textSize="@dimen/text_size" />

            <CheckBox
                android:id="@+id/chb3F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/F"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:onClick="getAnswer"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:text="Answer"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetState"
                android:fontFamily="casual"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:text="Reset"
                android:textAlignment="center"

                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAnswer"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:padding="@dimen/padding_size"
                android:text="RESULT: "
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_layout"
            android:orientation="horizontal"
            android:padding="@dimen/padding_size">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="casual"
                android:text="View Detail"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:indeterminate="false"
                android:padding="@dimen/padding_size"
                android:progressTint="?android:attr/colorFocusedHighlight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_bottom"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_size"
                    android:text="Quiz 1:"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/ans_quiz1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_bottom"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_size"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_bottom"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_size"
                    android:text="Quiz 2:"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/ans_quiz2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_bottom"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_size"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_bottom"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_size"
                    android:text="Quiz 3:"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/ans_quiz3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_bottom"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_size"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
